# uMat

./: .gitignore  LICENSE  README.md
normal/: CMakeLists.txt  normal  normal.cpp
umatTest/: CMakeLists.txt  umatTest  umatTest.cpp
